--- a/css/tree.css
+++ b/css/tree.css
@@ -32,20 +32,20 @@ div[data-tree-model] li {
   line-height: 20px;
 }
 
-div[data-tree-model] li .expanded {
-  padding: 1px 10px;
+div[data-tree-model] li .tree-expanded {
+  padding: 1px 20px;
   background-image: url("http://cfile23.uf.tistory.com/image/205B973A50C13F4B19D9BD");
   background-repeat: no-repeat;
 }
 
-div[data-tree-model] li .collapsed {
-  padding: 1px 10px;
+div[data-tree-model] li .tree-collapsed {
+  padding: 1px 20px;
   background-image: url("http://cfile23.uf.tistory.com/image/1459193A50C13F4B1B05FB");
   background-repeat: no-repeat;
 }
 
-div[data-tree-model] li .normal {
-  padding: 1px 10px;
+div[data-tree-model] li .tree-normal {
+  padding: 1px 20px;
   background-image: url("http://cfile23.uf.tistory.com/image/165B663A50C13F4B196CCA");
   background-repeat: no-repeat;
 }
