--- a/css/main.css
+++ b/css/main.css
@@ -173,24 +173,30 @@
 }
 
 .autocomplete{
-  width: 90%;
+  width: 100%;
+  height: 3em;
   position: relative;
 }
 
 .autocomplete i {
-    margin-left: -30px;
+    /* margin-left: -30px; */
+    position: absolute;
+    left: 97%;
+    top: 2px;
+    /* vertical-align: middle; */
+    margin-top: 10px;
 }
 
 .autocomplete input{
   font-size: 1.2em;
-  width: 90%;
-  padding:0.4em;
+  width: 100%;
+  padding:0.4em; 
 }
 
 .autocomplete ul{
   position: absolute;
-  left: 0;
-  width: 90%;
+  padding: 0;
+  width: 100%;
   border-left: 1px solid #888;
   border-right: 1px solid #888;
   border-bottom: 1px solid #888;
@@ -200,13 +206,13 @@
 .autocomplete li{
   text-align: left;
   list-style:none;
-  width: 90%;
+  width: 100%;
   padding:0.4em;
   background-color: #fff;
 }
 
 .autocomplete li.active{
-  width: 90%;
+  width: 100%;
   background-color: #4bf;
 }
 
