--- a/css/main.css
+++ b/css/main.css
@@ -364,17 +364,21 @@
 }
 
 .result-buttons-plus {
-    background-color: #03a9f4;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.16), 0px 2px 5px 0px rgba(0, 0, 0, 0.26);
+    border-radius: 3px;
 }
 
 .result-buttons-minus {
-    background-color: #ff6736;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.16), 0px 2px 5px 0px rgba(0, 0, 0, 0.26);
+    border-radius: 3px;
 }
 
 .widget-buttons.result-buttons-plus i,
 .widget-buttons.result-buttons-minus i {
     font-size: 2rem;
-    color: white;
+    color: black;
 }
 
 
